fix(FeatureTitle): increase breakpoint to large to avoid Feature cutoff

--- a/src/containers/ViewTwo/styles.scss
+++ b/src/containers/ViewTwo/styles.scss
@@ -74,7 +74,7 @@
           right: calc(50% + 50px);
           display: none;
         }
-        @include breakpoint("small") {
+        @include breakpoint("large") {
           .title {
             display: inline-block;
           }
